--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc --noEmit && vite build",
     "preview": "vite preview",
-    "start": "node server/standalone.js"
+    "start": "tsx server/standalone.ts",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "express": "^4.21.2",
@@ -16,7 +17,12 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.0.3",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-basic-ssl": "^1.2.0",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
     "vite": "^5.0.0"
   }
 }
