--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "tsc --noEmit && vite build",
     "preview": "vite preview",
     "start": "tsx server/standalone.ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "express": "^4.21.2",
@@ -17,12 +21,14 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-basic-ssl": "^1.2.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vitest": "^3.0.0"
   }
 }
