--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "baseUrl": "."
   },
   "include": ["client/**/*", "shared/**/*", "server/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "e2e"]
 }
