--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "selfsigned": "^2.4.1",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "y-websocket": "^1.5.4",
+    "yjs": "^13.6.29"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "@types/uuid": "^10.0.0",
+    "@types/ws": "^8.18.1",
     "@vitejs/plugin-basic-ssl": "^1.2.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
